# 2021-magnit-meetup

./: .clang-format  CMakeLists.txt  conanfile.txt  toolchain.cmake
presentation/: CMakeLists.txt  part-assoc-containers.adoc  part-downcasting.adoc  part-intro.adoc  part-outro.adoc  part-qsettings.adoc  part-row-range.adoc  part-running-meter.adoc  presentation.adoc  theme.css
test/: CMakeLists.txt  assoc_containers.cpp  downcasting.cpp  row_range.cpp  running_meter.cpp
